added HTML skeleton

--- a/BobRoss.html
+++ b/BobRoss.html
@@ -5,10 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="BobRoss.css"> 
-    <title>Document</title>
+    <title>Bob Ross</title>
 </head>
 <body>
-    
+    <header>
+        <div id="header">
+            <button id="red">Bob Ross</button>
+            <button id="green">Bob Ross</button>
+            <button id="blue">Bob Ross</button>
+        </div>
+    </header>
+    <div id="square-parent">
+        <div class="square-row">
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+        </div>
+        <div class="square-row">
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+        </div>
+        <div class="square-row">
+            <div class="square"></div>
+            <div class="square"></div>
+            <div class="square"></div>
+        </div>
+    </div>
     <script type="text/javascript" src="/BobRoss.js"></script> 
 </body>
 </html>
