--- a/BobRoss.html
+++ b/BobRoss.html
@@ -32,6 +32,6 @@
             <div class="square"></div>
         </div>
     </div>
-    <script type="text/javascript" src="/BobRoss.js"></script> 
+    <script type="text/javascript" src="BobRoss.js"></script> 
 </body>
 </html>
